Fix max-width of .keys to accomodate extra space from transform effect

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
     flex-wrap: wrap;
     text-align: center;
     text-transform: uppercase;
-    max-width: 1200px;
+    max-width: 1300px;
 }
 
 .key {
